# steno-tools

./: .gitignore  LICENSE  README.md  combine_dictionaries.py  generate_phonetic_dictionary.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  python-styling.yml  python-tests.yml
generator/: config.py  core.py  generate_phonetic_dictionary.py  ipa_utils.py  postprocessing.py  steno.py  stroke_builder.py  syllable.py  utils.py
generator/configs/: config.yaml
src/steno_tools/: cli.py  combine_dictionaries.py  sort_by_frequency.py  utils.py
src/steno_tools/generator/: config.py  core.py  ipa_utils.py  postprocessing.py  stroke_builder.py  syllable.py
tests/generator/: test_steno.py  test_syllable.py
